<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">IMT</string>	
	
	<string name="view_compte_color">Couleur</string>
	<string name="view_compte_name">Intitulé</string>
	<string name="view_compte_type">Type</string>
	
	<string name="view_event_pj_Btenvoi">Enregistrer</string>
	<string name="view_event_date_from">De</string>
	<string name="view_event_date_to">à</string>
	<string name="view_event_account">Compte</string>
	<string name="view_event_account_change_warning">Attention: vous ne pourrez plus modifier ce paramètre une fois l\'évènement créé.</string>
	
	<string name="descriptionPicureProfil">Image Profil : </string>
	
	<string name="view_profil_firstname">Prénom : </string>
	<string name="view_profil_lastname">Nom : </string>
	<string name="view_profil_adresse">Adresse : </string>
	<string name="view_profil_birthday">Date de naissance : </string>
	<string name="view_profil_code_postal">Code postal : </string>
	<string name="view_profil_city">Ville : </string>
	<string name="view_profil_identifiant">Identifiant : </string> 
	<string name="view_profil_password">Mot de passe : </string>
	<string name="view_profil_password_again">Confirmation de mot de passe : </string>
	<string name="view_profil_phone">Téléphone : </string>
	<string name="view_profil_mail">Mail : </string>
	<string name="view_profil_title">Profil : </string>
	
	<string name="send">Envoyer</string>
	
	<string name="view_month_week">Sem.</string>
	<string name="view_month_mon">Lun.</string>
	<string name="view_month_tue">Mar.</string>
	<string name="view_month_wen">Mer.</string>
	<string name="view_month_thu">Jeu.</string>
	<string name="view_month_fri">Ven.</string>
	<string name="view_month_sat">Sam.</string>
	<string name="view_month_sun">Dim.</string>

</resources>