<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <RelativeLayout
                android:id="@+id/layout_conteneur"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <EditText
                    android:id="@+id/editNom"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/event_pj_icone"
                    android:ellipsize="end"
                    android:hint="@string/view_profil_lastname"
                    android:inputType="textPersonName"
                    android:textSize="@dimen/text_size_small" />

                <EditText
                    android:id="@+id/editPrenom"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@+id/editNom"
                    android:layout_below="@+id/editNom"
                    android:ellipsize="end"
                    android:hint="@string/view_profil_firstname"
                    android:inputType="textPersonName"
                    android:textSize="@dimen/text_size_small" />

                <EditText
                    android:id="@+id/editIdentifiantInscription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@+id/editPrenom"
                    android:layout_below="@+id/editPrenom"
                    android:ellipsize="end"
                    android:hint="@string/view_profil_identifiant"
                    android:inputType="textPersonName"
                    android:textSize="@dimen/text_size_small" />

                <EditText
                    android:id="@+id/editMdpInscription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@+id/editIdentifiantInscription"
                    android:layout_below="@+id/editIdentifiantInscription"
                    android:ellipsize="end"
                    android:hint="@string/view_profil_password"
                    android:inputType="textPassword"
                    android:textSize="@dimen/text_size_small" />

                <EditText
                    android:id="@+id/editMdpInscriptionConf"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/editMdpInscription"
                    android:ellipsize="end"
                    android:hint="@string/view_profil_password_again"
                    android:inputType="textPassword"
                    android:textSize="@dimen/text_size_small" />

                <EditText
                    android:id="@+id/editDateNaissance"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/editMdpInscriptionConf"
                    android:ellipsize="end"
                    android:hint="@string/view_profil_birthday"
                    android:inputType="date"
                    android:textSize="@dimen/text_size_small" />

                <EditText
                    android:id="@+id/editTel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/editDateNaissance"
                    android:ellipsize="end"
                    android:hint="@string/view_profil_phone"
                    android:inputType="number"
                    android:textSize="@dimen/text_size_small" />

                <EditText
                    android:id="@+id/editAdresse"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/editTel"
                    android:ellipsize="end"
                    android:hint="@string/view_profil_adresse"
                    android:inputType="text"
                    android:textSize="@dimen/text_size_small" />

                <EditText
                    android:id="@+id/editVille"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/editAdresse"
                    android:ellipsize="end"
                    android:hint="@string/view_profil_city"
                    android:inputType="text"
                    android:textSize="@dimen/text_size_small" />

                <EditText
                    android:id="@+id/editCDP"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/editVille"
                    android:ellipsize="end"
                    android:hint="@string/view_profil_code_postal"
                    android:inputType="number"
                    android:textSize="@dimen/text_size_small" />

                <ImageView
                    android:id="@+id/event_pj_icone"
                    android:layout_width="140dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:layout_below="@+id/editCDP"
                    android:contentDescription="@string/descriptionPicureProfil"
                    android:src="@drawable/ic_action_profil_black" />
            </RelativeLayout>
        </ScrollView>
    </RelativeLayout>

</LinearLayout>