<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:ignore="HardcodedText" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp" >

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp" >

            <LinearLayout
                android:id="@+id/main_content_event"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:paddingTop="30dp" >

                    <TextView
                        android:id="@+id/TextView03"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginRight="20dp"
                        android:layout_weight="1"
                        android:gravity="center_vertical|right"
                        android:text="@string/view_compte_name"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@android:color/black" />

                    <EditText
                        android:id="@+id/activity_compte_title"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:ems="10"
                        android:textColor="@android:color/black" >

                        <requestFocus />
                    </EditText>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:paddingTop="30dp" >

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginRight="20dp"
                        android:layout_weight="1"
                        android:gravity="center_vertical|right"
                        android:text="@string/view_compte_type"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@android:color/black" />

                    <Spinner
                        android:id="@+id/activity_compte_type"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:paddingTop="30dp" >

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginRight="20dp"
                        android:layout_weight="1"
                        android:gravity="center_vertical|right"
                        android:text="@string/view_compte_color"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@android:color/black" />

                    <ImageButton
                        android:id="@+id/activity_compte_color"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3" />
                </LinearLayout>
            </LinearLayout>
        </FrameLayout>
    </ScrollView>

</LinearLayout>